EDSC-793: Fix button style rules and flyout alignment

--- a/edsc/collections-collapsed/src/css/collections-collapsed.less
+++ b/edsc/collections-collapsed/src/css/collections-collapsed.less
@@ -112,12 +112,13 @@
     width: 16px;
   }
 
-  .ccol-more {
+  .ccol-more, .ccol-more.button-active {
     float: right;
     color: #fff;
     background: transparent;
     font-size: 1em;
     padding: 0;
+    border: 0;
 
     &:hover {
       color: #888;
